2004-04-06 00:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/inspectors.m: added defaultItemForm attribute.
	Added code in [GormPopUpButtonAttributesInspector 
	_setValuesFromControl:] to select the appropriate item, when the
	value is changed in the inspector.
	* Palettes/2Controls/GormNSPopUpButtonInspector.gorm:
	corresponding changes to above code modifications.
	
2004-04-05 00:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument rebuildObjToNameMapping] some 
	additional debugging information.  Also in [GormDocument loadDocument:]
	unarchiver is now explicitly using RELEASE instead of AUTORELEASE.

2004-04-04 22:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument rebuildObjToNameMapping]
	use [[nameTable allKeys] objectEnumerator] instead of keyEnumerator.
	(slightly more efficient).
	
2004-04-04 12:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Corrected some warnings and 
	streamlined the GormConnectionMananger.  Also added code in
	[GormConnectionManager updateButtons] to grey out the "ok"
	button when the connection isn't a valid one.
	* GormWindowEditor.m: Corrected some warnings.

2004-04-03 13:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected a problem with renaming a class
	in [GormClassManager renameClassName:toClassName:].  The
	direct subclasses of the class whose name is being changed must
	be modified to have their superclass name set to the new name.
	* GormCustomView.m: Set the custom view to use the bold font to
	display the view name at the default size set by the user.
	* GormDocument.m: Corrected an issue with redisplay of the changed
	class name.   Also made some changes to correct some compiler
	warnings.
	* GormFontViewController.m: The default action of the font controller
	is now to set the "encodes default" to off, since this is what